fixed align footer links

--- a/index.css
+++ b/index.css
@@ -1809,6 +1809,8 @@ a,
         flex-direction: column;
         gap: 14px;
         text-align: left;
+        justify-content: start;
+        align-items: start;
     }
 
     .footer .footer-last-col p {
@@ -1826,11 +1828,8 @@ a,
     }
 
     .drive {
-        font-size: 2.4em;
+        font-size: 2em;
         padding: 15px;
-    }
-    .drive{
-        font-size: 30px;
     }
     .link-p {
         display: none;
